2006-06-24  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/printcontext.hg: Renamed the const function get_cairo()
	to get_cairo_context(), to match the original.

2006-06-24  Marko Anastasov <marko@marko.anastasov.name>

	* docs/tutorial/gtkmm-tut.xml: Typo correction in the Clipboard
	chapter by Gezim Hoxha.

2.9.6:

2006-06-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printjob.ccg:
	* gtk/src/printjob.hg: send_job(): This no longer throws an 
	exception, because the C function no longer takes a GError*.
	* gtk/src/statusicon.ccg:
	* gtk/src/statusicon.hg: get_geometry(): Compilation fixes.

2006-06-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/label.hg: Added get/set_line_wrap_mode() and property.
	* gtk/src/menushell.hg: Added get/set_take_focus() and property.
	* gtk/src/printsettings.ccg:
	* gtk/src/printsettings.hg: Put the standard settings in a member 
	class as static const Glib::ustrings, initialized in the .cpp file.
	* gtk/src/statusicon.ccg:
	* gtk/src/statusicon.hg: Added get_geometry().

2006-06-21  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/printer.ccg:
	* gtk/src/printer.hg: Wrapped get_job_count() which was accidentaly
	in the ignore list. New function: enumerate_printers().

2006-06-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printunixdialog.ccg: Add the Gtk:: prefix for Label, to 
	fix the build, and include the label.h header.

2006-06-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printoperation.hg: Include the C header in the private/*.h 
	file, so that it can use the enum.
	* gtk/src/printsettings.hg: Remove PRINT_SETTINGS_PRINT_TO_FILE.
	We really need to make this more like the Stock IDs.

2006-06-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_enums.defs: Updated with enums.pl
	* gtk/src/messagedialog.hg: Added set_image() and property.
	* gtk/src/printoperation.hg: Do not include gtkprintoperation.h.