@@ -5265,7 +5265,7 @@ The first argument is a <classname>slot</classname> you wish to have called
 when the timeout occurs. The second argument is the number of milliseconds
 between calls to that method. You receive a
 <classname>sigc::connection</classname> object that can be used to deactivate
-the connection.
+the connection using its <function>disconnect()</function> method:
 </para>
 
 <para>
@@ -5276,11 +5276,11 @@ my_connection.disconnect();
 </para>
 
 <para>
-to destroy the connection. Another way of destroying the connection is your
-signal handler. It has to be of the type
-<classname>sigc::slot&lt;bool&gt;</classname>. As you see from the definition
-your signal handler has to return a value of the type <literal>bool</literal>.
-A definition of a sample method might look like this:
+Another way of destroying the connection is your signal handler.
+It has to be of the type <classname>sigc::slot&lt;bool&gt;</classname>.
+As you see from the definition your signal handler has to return a value of
+the type <literal>bool</literal>. A definition of a sample method might
+look like this:
 
 <programlisting>
 bool MyCallback() { std::cout &lt;&lt; "Hello World!\n" &lt;&lt; std::endl; return true; }
