@@ -1,3 +1,8 @@
+2006-06-25  Marko Anastasov <marko@marko.anastasov.name>
+
+	* docs/tutorial/gtkmm-tut.xml: Fixed the sentence explaining
+	disconnect() in the Timeouts chapter. #345848 from Gezim Hoxha.
+
 2006-06-24  Marko Anastasov <marko@marko.anastasov.name>
 
 	* gtk/src/printcontext.hg: Renamed the const function get_cairo()
